--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.11.1",
     "bootstrap": "^4.3.1",
+    "cookie-parser": "^1.4.4",
+    "csurf": "^1.10.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "handlebars-helpers": "^0.10.0",
@@ -29,9 +31,9 @@
     "morgan": "^1.9.1",
     "mysql2": "^1.7.0",
     "node-sass-middleware": "^0.11.0",
-    "nodemon": "^1.19.2",
-    "popper.js": "^1.15.0",
-    "sequelize": "^5.19.0",
+    "nodemon": "^1.19.4",
+    "popper.js": "^1.16.0",
+    "sequelize": "^5.19.7",
     "sequelize-cli": "^5.5.1",
     "serve-favicon": "^2.5.0"
   }
